Redid help with ScrolledHTMLViewer and Help directory.

--- a/WindowsPerformanceViewer/Help/Overview.html
+++ b/WindowsPerformanceViewer/Help/Overview.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<link href="book.css" rel="stylesheet" type="text/css" />
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Windows Performance Viewer</title>
 </head>
-
 <body>
-<h1 align="center"><strong>Windows Performance Viewer Overview</strong></h1>
+<h1 align="center"><strong><img src="WindowsPerformance.256x256.png" alt="Logo" width="96" height="96" align="middle" />Windows Performance Viewer</strong></h1>
 <p align="left">Windows Performance Viewer accesses the Windows event logs and presents details of the performance in convenient ways. The logs used in this application are those provided by Microsoft-Windows-Diagnostics-Performance. You will probably have to run it as administrator to get access to the diagnostic logs.</p>
 <h3><strong>Boot Performance</strong></h3>
 <p align="left">These data are found in the Applications and Services Logs | Microsoft | Windows | Diagnostics-Performance | Operational for Event ID = 100.</p>
