--- a/WindowsPerformanceViewer/Help/Overview.html
+++ b/WindowsPerformanceViewer/Help/Overview.html
@@ -11,6 +11,13 @@
 <h3><strong>Boot Performance</strong></h3>
 <p align="left">These data are found in the Applications and Services Logs | Microsoft | Windows | Diagnostics-Performance | Operational for Event ID = 100.</p>
 <p align="left">The&nbsp;<em>BootTime</em>&nbsp;is the sum of the&nbsp;<em>MainPathBootTime,</em>&nbsp;and the&nbsp;<em>BootPostBootTime</em>&nbsp;and is the best figure of merit for the time it takes to boot. The&nbsp;<em>MainPathBootTime</em>&nbsp;is roughly the time it takes for the desktop to become functional. There is not enough space in this overview to describe all the available parameters. There is more information on the web.</p>
+<h3>Installation</h3>
+<p>If you are installing from a download, just unzip the files into a directory somewhere convenient. Then run it from there. If you are installing from a build, copy these files and directories from the bin/Release directory to a convenient directory..</p>
+<ul>
+  <li>WindowsPerformanceViewer.exe</li>
+  <li>Help</li>
+</ul>
+<p>To uninstall, just delete these files. </p>
 <h3 align="left"><strong>File Menu</strong></h3>
 <p align="left"><strong>Create Boot CSV File</strong></p>
 <p align="left">Allows you to make a CSV file of all the data and to open it in a spreadsheet. The latter should work if you have a file association for .csv.</p>
