Added README.md and made minor changes to the documentation.

--- a/WindowsPerformanceViewer/Help/Overview.html
+++ b/WindowsPerformanceViewer/Help/Overview.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1 align="center"><strong><img src="WindowsPerformance.256x256.png" alt="Logo" width="96" height="96" align="middle" />Windows Performance Viewer</strong></h1>
-<p align="left">Windows Performance Viewer accesses the Windows event logs and presents details of the performance in convenient ways. The logs used in this application are those provided by Microsoft-Windows-Diagnostics-Performance. You will probably have to run it as administrator to get access to the diagnostic logs.</p>
+<p align="left">Windows Performance Viewer accesses the Windows event logs and presents details of the performance in convenient ways. The logs used in this application are those provided by Microsoft-Windows-Diagnostics-Performance. You will probably have to run it as administrator to get access to the diagnostic logs. The program does not change anything. </p>
 <h3><strong>Boot Performance</strong></h3>
 <p align="left">These data are found in the Applications and Services Logs | Microsoft | Windows | Diagnostics-Performance | Operational for Event ID = 100.</p>
 <p align="left">The&nbsp;<em>BootTime</em>&nbsp;is the sum of the&nbsp;<em>MainPathBootTime,</em>&nbsp;and the&nbsp;<em>BootPostBootTime</em>&nbsp;and is the best figure of merit for the time it takes to boot. The&nbsp;<em>MainPathBootTime</em>&nbsp;is roughly the time it takes for the desktop to become functional. There is not enough space in this overview to describe all the available parameters. There is more information on the web.</p>
